--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página Web</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <h1>Mi Página Web</h1>
+
+    <!-- Agrega la imagen con la etiqueta <img> -->
+    <img src="muchacho.jpg" alt="Descripción de la imagen">
+
 </body>
 </html>
