--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
     <!-- Agrega la imagen con la etiqueta <img> -->
     <img src="muchacho.jpg" alt="Descripción de la imagen">
+    <!-- Agrega un elemento de audio con la etiqueta <audio> -->
+        <audio controls>
+            <source src="feid.mp3" type="audio/mp3">
+            Tu navegador no soporta el elemento de audio.
+        </audio>
 
 </body>
 </html>
