--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
 
     <h1>Mi Página Web</h1>
-
+    
+    <audio controls autoplay>
+        <source src="feid.mp3" type="audio/mp3">
+        Tu navegador no soporta el elemento de audio.
+    </audio>
     <!-- Agrega la imagen con la etiqueta <img> -->
-    <img src="muchacho.jpg" alt="Descripción de la imagen">
+    <img src="gato.gif" alt="Descripción de la imagen">
     <!-- Agrega un elemento de audio con la etiqueta <audio> -->
-        <audio controls>
-            <source src="feid.mp3" type="audio/mp3">
-            Tu navegador no soporta el elemento de audio.
-        </audio>
 
 </body>
 </html>
